# sbi-hackathon-2026

./: .gitignore  README.md  devenv.nix  pyproject.toml
models/: README.md  description.md
models/edmf-boundary-layer-turbulence/: README.md
models/pastax-ocean-drifters-sde/: README.md
models/planetary-remote-sensing-photometric/: HapkeModelPython.py  README.md
models/sequence-alignments/: Filippo.ipynb  README copy.md  README.md  README_Teddy.md  gdoussonlys+parameters.ipynb  gdoussonlys.ipynb  learning_script.py  requirements.txt
models/sequence-alignments/checkpoints/: teddy_no_regression.pt
models/sequence-alignments/gen_with_recomb/: conf_test.json  experiment_design_with_recomb.h  external_sim.cpp  generate_msa_recomb.h  generation.cpp  generation.pyx  jsoncpp.cpp  (+5 more)
models/tunax-vertical-ocean-physics/: README.md
src/: utils.py
src/2_contributor-track/: 02-sbi-package-architecture.md
src/2_intro_abc_npe/: nb_2a_intro_to_sbi.ipynb  nb_2b_npe.ipynb
src/3_workflow/: 02_diagnostics.ipynb  nb_03_sbi_toolbox_npe.ipynb  nb_04_summary_stats.ipynb  nb_05_diagnostics.ipynb  nb_3a_sbi_toolbox_npe.ipynb  nb_3b_summary_stats.ipynb  nb_3c_diagnostics.ipynb
src/4_beyond_NPE/: nb_04_nle_comparison.ipynb  nb_05_sequential_npe.ipynb  nb_4b_sequential_npe.ipynb  sbi-method-selection-guide.md
src/5_advanced/: nb_09_foundation_model.ipynb  nb_5a_trial_data.ipynb
src/6_model_misspecification/: nb_06_misspecification.ipynb
src/gen_figures/: session1.ipynb  session3.ipynb
src/simulators/: __init__.py  lotka_volterra.py  mixed_parameters.py  trial_data.py
(+47 files in other folders)
