[project]
name = "sbi-hackathon-2026"
version = "0.1.0"
description = "SBI Hackathon @ Grenoble 2026 - Simulation-Based Inference tutorial and hackathon materials"
requires-python = ">=3.10"
dependencies = [
    "sbi",
    "jupyter",
    "ipywidgets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulators"]
sources = ["src"]
